# llm_microlibs

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
.run/: test_falcon_regression.run.xml
deployment/: README.md  connect_tunnel.sh  delete_directory_from_hosts.sh  download_from_hosts.sh  download_part_weights.sh  start_tunnel_to_next.sh  upload_part_weights.sh  upload_to_hosts.sh
llm_falcon_model/: .gitignore  MANIFEST.in  README.md  pyproject.toml
llm_falcon_model/.run/: test_falcon_initialization.run.xml
llm_falcon_model/development_tools/: compare_40b_to_original.py  compare_7b_to_original.py  create_reference_40b.py  create_reference_7b.py
llm_falcon_model/src/llm_falcon_model/: __init__.py  config_180b.json  config_40b.json  config_7b.json  configuration_RW.py  convert_to_sepweight.py  deciders.py  distributed.py  falcon7b_tokenizer.json  generation.py  initialization.py  modeling_updated.py  modelling_RW.py  run_part.py  scoring.py  sepweight_conversion.py  tokenization.py
llm_falcon_model/tests/: .gitignore  test_base.py  test_initializations.py  test_partial.py  test_regression.py
llm_partial_run/: README.md  pyproject.toml
llm_partial_run/src/: ranges.py  run_end.py  run_mid.py  run_part.py  weight_reload.py
llm_sampler/: .gitignore  MICROLIB.md  README.md  pyproject.toml
llm_sampler/.run/: test_llm_sampler.run.xml
llm_sampler/src/llm_sampler/: __init__.py  base.py  closed_sampling.py  gpt_fast.py  hf.py  utils.py
llm_sampler/tests/: test_base.py  test_utils.py
llm_separate_weights/: README.md  pyproject.toml
llm_separate_weights/src/llm_separate_weights/: __init__.py
llm_sepweight/: .test.env  MICROLIB.md  README.md  pyproject.toml  pytest.ini
llm_sepweight/.run/: test_llm_sepweight.run.xml  test_loading_fns.run.xml
llm_sepweight/development_tools/: README.md  migrate_old_sepweight.py  remove_leading_index_in_transformer_layers.py
llm_sepweight/src/llm_sepweight/: __init__.py  dumping.py  filenames.py  loading.py  migrate_to_flat_sepweight.py  part_module.py  part_specification.py  part_state_dict.py  pth_conversion.py  safetensors_conversion.py  sepweight_conversion.py  state_dict_separation.py  utils.py
llm_sepweight/tests/: conftest.py  test_loading.py  test_loading_fns.py  test_part_spec.py
llm_weights_mmap/: README.md  pyproject.toml
llm_weights_mmap/src/llm_weights_mmap/: __init__.py  loading.py  weights_separation.py
