# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_partial_run"
version = "0.1.0"
description = "Microlib for partial deployment of LLMs"
readme = "README.md"
authors = [{ name = "Hristo Vrigazov", email = "hvrigazov@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["socket_rpc", "llm_sepweight"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/microlib-org/llm_microlibs/llm_partial_run"

[project.optional-dependencies]
dev = ["pytest", "tqdm"]
