# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_sampler"
version = "0.1.0"
description = "Microlib for sampling from an LLM"
readme = "README.md"
authors = [{ name = "Hristo Vrigazov", email = "hvrigazov@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["torch"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/realpython/reader"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "pytest"]
